--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^1.2.1",
     "core-js": "^3.8.3",
+    "d3": "^7.8.4",
     "element-ui": "^2.15.12",
     "es6-promise": "^4.2.8",
     "vue": "^2.6.14",
+    "vue-d3-charts": "^0.2.8",
     "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.0",
