--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@turf/turf": "^6.5.0",
     "axios": "^1.2.1",
     "core-js": "^3.8.3",
     "d3": "^7.8.4",
