--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.15.12",
     "es6-promise": "^4.2.8",
     "mapbox-gl": "^2.14.1",
+    "mapbox-gl-compare": "^0.4.1",
     "vue": "^2.6.14",
     "vue-d3-charts": "^0.2.8",
     "vue-infinite-loading": "^2.4.5",
